tests/integrations/basic/tests/actual_tests/rustfix-multiple.stderr
error[E0308]: mismatched types
 --> tests/actual_tests/rustfix-multiple.rs:6:5
  |
6 |     f()
  |     ^^^ expected `()`, found `usize`
  |
help: consider using a semicolon here
  |
6 |     f();
  |        +
help: try adding a return type
  |
5 | pub fn g() -> usize {
  |            ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
